--- a/rro_overlays/WifiResOverlayRMX2020/res/values/bools.xml
+++ b/rro_overlays/WifiResOverlayRMX2020/res/values/bools.xml
@@ -19,4 +19,7 @@
 
     <!-- Boolean indicating whether the wifi chipset has background scan support -->
     <bool translatable="false" name="config_wifi_background_scan_support">true</bool>
+
+     <!-- Indicates that connected MAC randomization is supported on this device -->
+    <bool translatable="false" name="config_wifi_connected_mac_randomization_supported">true</bool>
 </resources>
