RMX2020: overlay: Enable 80211ac config for softap
Overlay flag config_wifi_softap_ieee80211ac_supported to true to
enable 80211ac for wifi hotspot

CRs-Fixed: 2744341
Change-Id: I3f6c3e762fa33e42fa48de32fe768b51522eda8c

--- a/rro_overlays/WifiResOverlayRMX2020/res/values/bools.xml
+++ b/rro_overlays/WifiResOverlayRMX2020/res/values/bools.xml
@@ -22,4 +22,8 @@
 
      <!-- Indicates that connected MAC randomization is supported on this device -->
     <bool translatable="false" name="config_wifi_connected_mac_randomization_supported">true</bool>
+
+     <!-- Enable 80211ac for Wifi hotspot (SAP) -->
+    <bool translatable="false" name="config_wifi_softap_ieee80211ac_supported">true</bool>
+    
 </resources>
