RMX2020: overlay: enable P2P MAC randomization
Bug: 146398159
Test: enter Wi-Fi Direct and check p2p interface address is randomized.
Change-Id: I5f03f907174d6eec2a739c9112fc2e8fad5ef0ae

--- a/rro_overlays/WifiResOverlayRMX2020/res/values/bools.xml
+++ b/rro_overlays/WifiResOverlayRMX2020/res/values/bools.xml
@@ -25,5 +25,8 @@
 
      <!-- Enable 80211ac for Wifi hotspot (SAP) -->
     <bool translatable="false" name="config_wifi_softap_ieee80211ac_supported">true</bool>
+
+    <!-- True if the firmware supports p2p MAC randomization -->
+    <bool translatable="false" name="config_wifi_p2p_mac_randomization_supported">true</bool>
     
 </resources>
