--- a/rro_overlays/WifiResOverlayRMX2020/res/values/bools.xml
+++ b/rro_overlays/WifiResOverlayRMX2020/res/values/bools.xml
@@ -28,5 +28,8 @@
 
     <!-- True if the firmware supports p2p MAC randomization -->
     <bool translatable="false" name="config_wifi_p2p_mac_randomization_supported">true</bool>
+
+    <!-- Enable ACS (auto channel selection) for Wifi hotspot (SAP) -->
+    <bool translatable="false" name="config_wifi_softap_acs_supported">true</bool>
     
 </resources>
