RMX2020: overlay: Enable config_wifi_fast_bss_transition_enabled
Change-Id: I92e544b8c51471816a8aec59b647673c3fe1d145

--- a/rro_overlays/WifiResOverlayRMX2020/res/values/bools.xml
+++ b/rro_overlays/WifiResOverlayRMX2020/res/values/bools.xml
@@ -31,5 +31,8 @@
 
     <!-- Enable ACS (auto channel selection) for Wifi hotspot (SAP) -->
     <bool translatable="false" name="config_wifi_softap_acs_supported">true</bool>
+
+    <!-- Boolean indicating whether 802.11r Fast BSS Transition is enabled on this platform -->
+    <bool translatable="false" name="config_wifi_fast_bss_transition_enabled">true</bool>
     
 </resources>
