RMX2020: overlay: Skip restoring network selection
* Sync with Stock

Change-Id: I5f2781b05d344f8dd3783df3e77a30946f67f16c
Signed-off-by: Sarthak Roy <sarthak@pixelos.net>

--- a/rro_overlays/FrameworksResOverlayRMX2020/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayRMX2020/res/values/config.xml
@@ -209,7 +209,7 @@
 
     <!-- Boolean indicating if restoring network selection should be skipped -->
     <!-- The restoring is handled by modem if it is true-->
-     <bool name="skip_restoring_network_selection">false</bool>
+     <bool name="skip_restoring_network_selection">true</bool>
  	
 	<!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
     <bool name="config_cleanupUnusedFingerprints">false</bool>
