RMX2020: overlay: set config_switch_phone_on_voice_reg_state_change as false
* Sync with Stock

Change-Id: I06ad7f7b46179049db4279d21bb96288625ae43d
Signed-off-by: Sarthak Roy <sarthak@pixelos.net>

--- a/rro_overlays/FrameworksResOverlayRMX2020/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayRMX2020/res/values/config.xml
@@ -198,7 +198,7 @@
     <!-- Config determines whether to update phone object when voice registration
          state changes. Voice radio tech change will always trigger an update of
          phone object irrespective of this config -->
-     <bool name="config_switch_phone_on_voice_reg_state_change">true</bool>
+     <bool name="config_switch_phone_on_voice_reg_state_change">false</bool>
 
     <!-- If this is true, the screen will come on when you unplug usb/power/whatever. -->
      <bool name="config_unplugTurnsOnScreen">true</bool>
