RMX2020: overlay: Move config_audioPanelOnLeftSide to arrow_config
Change-Id: Ib7a2e5f0b339cf8a0beb261ec46499a44f407ecd
Signed-off-by: Sarthak Roy <sarthakroy2002@gmail.com>

--- a/rro_overlays/SystemUIOverlayRMX2020/res/values/arrow_config.xml
+++ b/rro_overlays/SystemUIOverlayRMX2020/res/values/arrow_config.xml
@@ -18,4 +18,7 @@
     -->
     <string name="config_screenRecorderAVCProfileLevel" translatable="false">3</string>
 
+    <!-- Allow devices override audio panel location to the left side -->
+    <bool name="config_audioPanelOnLeftSide">true</bool>
+
 </resources>
