--- a/rro_overlays/FrameworksResOverlayRMX2020/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayRMX2020/res/values/config.xml
@@ -522,4 +522,8 @@
          so that applications can still use their own mechanisms. -->
     <bool name="config_enableAutoPowerModes">true</bool>
 
+    <!-- Pocket Lock -->
+    <bool name="config_pocketModeSupported">false</bool>
+    <bool name="config_pocketUseLightSensor">false</bool>
+
 </resources>
