RMX2020: RealmeParts: doze: Add top intro text
Change-Id: Ia10fd709626cc1fbb700f6865df3611060a90143

--- a/app/RealmeParts/res/xml/doze_settings.xml
+++ b/app/RealmeParts/res/xml/doze_settings.xml
@@ -19,6 +19,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/ambient_display_title">
 
+    <com.android.settingslib.widget.TopIntroPreference
+        android:key="doze_top_intro"
+        android:title="@string/ambient_display_enable_summary"/>gi
+
     <com.android.settingslib.widget.MainSwitchPreference
         android:defaultValue="false"
         android:key="doze_enable"
